--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "iview": "^2.13.0",
     "vue": "^2.3.3",
     "vue-electron": "^1.0.6",
+    "vue-resource": "^1.5.1",
     "vue-router": "^2.5.3",
     "vuex": "^2.3.1"
   },
